--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,5 @@
 @import "./utils/variables";
 @import "./base/polices";
-body {
-    font-family: 'Roboto', sans-serif;
-}
+@import "./layout/_footer";
+@import "./layout/_header";
+@import "./utils/mixins"
