--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,120 @@
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap");
-header {
+.header {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+.header__titre {
   font-family: "Shrikhand", cursive;
-  font-weight: 800;
+  margin-bottom: 0px;
+}
+.header__localisation {
+  display: flex;
+  align-items: center;
+  font-size: 1.2em;
+  color: #404040;
+  background-color: #e6e6e6;
+  width: 100%;
+  justify-content: center;
+  box-shadow: inset 0px 4px 5px -4px #404040;
+}
+.header__localisation p {
+  padding-left: 15px;
+}
+
+body {
+  width: 100%;
+  margin: 0px;
+  font-family: "Roboto", sans-serif;
+}
+
+section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+h2 {
+  font-size: 1.7em;
+  font-weight: 600;
+}
+
+html {
+  box-sizing: border-box;
+}
+
+.restaurant__nav {
+  width: 100%;
+}
+.restaurant__nav a {
+  width: 100%;
+}
+.restaurant__article {
+  display: flex;
+  width: 96%;
+  position: relative;
+  margin: 2%;
+  box-shadow: inset 0px 4px 5px -4px #404040;
+  border-radius: 20px;
+  height: 300px;
+}
+.restaurant__article--new {
+  position: absolute;
+  top: 7%;
+  right: 2%;
+  color: #32b091;
+  background-color: #ade8d9;
+  padding: 10px 15px 10px 15px;
+  border-radius: 5px;
+  font-weight: 600;
+  font-size: 1em;
+}
+.restaurant__img {
+  width: 100%;
+  height: 83%;
+}
+.restaurant__img img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 20px 20px 0px 0px;
+}
+.restaurant__texte {
+  height: 13%;
+  color: black;
+}
+
+.welcome {
+  background-color: #f0f0f0;
+}
+.welcome h2 {
+  font-size: 1.8em;
+  width: 60%;
+  text-align: center;
+  margin-top: 50px;
+  margin-bottom: 20px;
+}
+.welcome P {
+  width: 70%;
+  text-align: center;
+  font-size: 1.3em;
+  color: #333333;
+  margin: 0px 0px 40px 0px;
+  font-weight: 300;
+}
+.welcome__button {
+  border-radius: 25px;
+  padding: 17px;
+  color: white;
+  font-size: 1.2em;
+  font-weight: 500;
+  margin-bottom: 50px;
+  background: linear-gradient(to bottom right, #FF79DA, #9356DC);
+  border: unset;
+  box-shadow: 10px 5px 5px #e6e6e6;
 }
 
 /*# sourceMappingURL=style.css.map */
