--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,4 +2,75 @@
 @import "./base/polices";
 @import "./layout/_footer";
 @import "./layout/_header";
-@import "./utils/mixins"
+@import "./utils/mixins";
+@import "./utils/components";
+@import "./base/base";
+
+        .restaurant {
+            &__nav {
+                width: 100%;
+                & a {
+                    width: 100%;
+                }
+            }
+            &__article {
+            display: flex;
+            width: 96%;
+            position: relative;
+            margin: 2%;
+            box-shadow: inset 0px 4px 5px -4px #404040; ;
+            border-radius: 20px;
+            height: 300px;
+                &--new {
+                position:absolute;
+                top: 7%;
+                right: 2%;
+                color: darken($color: $color-tertiary, $amount: 30%);
+                background-color: lighten($color: $color-tertiary, $amount: 5%) ;
+                padding:10px 15px 10px 15px ;
+                border-radius: 5px;
+                font-weight: 600;
+                font-size: 1em;
+            }
+            
+            }
+            &__img {
+                width: 100%;
+                height: 83%;
+                & img {
+                    height: 100%;
+                width: 100%;
+                object-fit: cover;
+                border-radius: 20px 20px 0px 0px;
+                }
+            }
+            &__texte {
+                height:13% ;
+                color: black;
+            }
+        }
+        .welcome {
+            background-color: lighten($color: black, $amount: 94%);
+
+            h2 {
+                    font-size: 1.8em;
+                    width: 60%;
+                    text-align: center;
+                    margin-top: 50px;
+                    margin-bottom: 20px;
+                }
+            P   {
+                width: 70%;
+                text-align: center;
+                font-size: 1.3em;
+                color:lighten($color: black, $amount: 20%);
+                margin: 0px 0px 40px 0px;
+                font-weight: 300;
+            }
+            &__button {
+                @include button;
+            }
+            }
+        .fonctionnement {
+        }
+
