--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,13 @@ body {
 section {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  flex-wrap: nowrap;
+  align-items: flex-start;
   width: 100%;
+}
+section h2 {
+  margin-left: 5%;
+  margin-bottom: 20px;
 }
 
 h2 {
@@ -46,18 +51,29 @@ html {
   box-sizing: border-box;
 }
 
-.restaurant__nav {
+a {
+  text-decoration: none;
   width: 100%;
 }
-.restaurant__nav a {
+
+h3 {
+  font-size: 1.4em;
+  font-weight: 600;
+}
+
+.restaurant {
+  background-color: #f0f0f0;
+  padding: 5% 2% 5% 2%;
+}
+.restaurant__nav {
   width: 100%;
 }
 .restaurant__article {
   display: flex;
-  width: 96%;
+  width: 88%;
   position: relative;
-  margin: 2%;
-  box-shadow: inset 0px 4px 5px -4px #404040;
+  margin: 3%;
+  box-shadow: 5px 5px 10px #cccccc;
   border-radius: 20px;
   height: 300px;
 }
@@ -74,7 +90,7 @@ html {
 }
 .restaurant__img {
   width: 100%;
-  height: 83%;
+  height: 70%;
 }
 .restaurant__img img {
   height: 100%;
@@ -83,18 +99,37 @@ html {
   border-radius: 20px 20px 0px 0px;
 }
 .restaurant__texte {
-  height: 13%;
   color: black;
+  position: relative;
+  padding: 15px;
+}
+.restaurant__texte h3 {
+  margin: 0px 0px 5px 0px;
+}
+.restaurant__texte p {
+  margin: 0px;
+  font-size: 1.2em;
+}
+.restaurant__texte div {
+  position: absolute;
+  right: 6%;
+  top: 37%;
+}
+.restaurant__texte div i {
+  font-size: 2em;
+  font-weight: 300;
 }
 
 .welcome {
   background-color: #f0f0f0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .welcome h2 {
-  font-size: 1.8em;
+  font-size: 1.7em;
   width: 60%;
   text-align: center;
-  margin-top: 50px;
   margin-bottom: 20px;
 }
 .welcome P {
@@ -111,10 +146,50 @@ html {
   color: white;
   font-size: 1.2em;
   font-weight: 500;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
   background: linear-gradient(to bottom right, #FF79DA, #9356DC);
   border: unset;
   box-shadow: 10px 5px 5px #e6e6e6;
+}
+
+.fonctionnement ol {
+  list-style: none;
+  margin-block-start: unset;
+  margin-block-start: unset;
+  margin-block-end: unset;
+  margin-inline-start: unset;
+  margin-inline-end: unset;
+  padding-inline-start: unset;
+  width: 100%;
+}
+.fonctionnement ol li {
+  width: 90%;
+  margin: 2% 2% 2% 5%;
+  padding: 30px 0% 30px 0%;
+  box-shadow: 5px 5px 10px #cccccc;
+  border: #f2f2f2 solid 5px;
+  border-radius: 30px;
+  font-size: 1.3em;
+  background-color: #f2f2f2;
+}
+.fonctionnement ol i {
+  font-size: 1.3em;
+  color: #666666;
+}
+.fonctionnement ol p {
+  display: inline;
+  margin-left: 7%;
+  width: 100%;
+  font-weight: 500;
+}
+.fonctionnement ol .liste {
+  background-color: #9356DC;
+  color: white;
+  padding: 0.4rem 0.7rem 0.4rem 0.7rem;
+  border-radius: 100%;
+  margin-right: 2%;
+  position: relative;
+  left: -15px;
 }
 
 /*# sourceMappingURL=style.css.map */
