--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,8 +7,14 @@ body {
 section {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    flex-wrap: nowrap;
+    align-items: flex-start;  
     width: 100%;
+    h2 {
+        
+        margin-left: 5%;
+        margin-bottom: 20px;
+    }
 }
 h2 {
     font-size: 1.7em;
@@ -16,3 +22,11 @@ h2 {
 html {
         box-sizing: border-box;
  }
+ a{
+    text-decoration: none;
+    width: 100%;
+}
+h3 {
+    font-size: 1.4em;
+    font-weight: 600;
+}
