--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,18 +7,18 @@
 @import "./base/base";
 
         .restaurant {
+            background-color:lighten($color: black, $amount: 94%) ;
+            padding: 5% 2% 5% 2%;
+            
             &__nav {
                 width: 100%;
-                & a {
-                    width: 100%;
-                }
             }
             &__article {
             display: flex;
-            width: 96%;
+            width: 88%;
             position: relative;
-            margin: 2%;
-            box-shadow: inset 0px 4px 5px -4px #404040; ;
+            margin: 3%;
+            box-shadow: 5px 5px 10px lighten($color: black, $amount: 80%) ;
             border-radius: 20px;
             height: 300px;
                 &--new {
@@ -31,12 +31,11 @@
                 border-radius: 5px;
                 font-weight: 600;
                 font-size: 1em;
-            }
-            
+            }         
             }
             &__img {
                 width: 100%;
-                height: 83%;
+                height: 70%;
                 & img {
                     height: 100%;
                 width: 100%;
@@ -45,18 +44,42 @@
                 }
             }
             &__texte {
-                height:13% ;
                 color: black;
+                position: relative;
+                padding:15px;
+
+                h3 {
+                    margin: 0px 0px 5px 0px;
+
+                }
+                p {
+                   margin: 0px; 
+                   font-size: 1.2em;
+                }
+                div {
+                    position:absolute;
+                    right: 6%;
+                    top:37%;
+                    
+                    i{
+                      
+                        font-size: 2em;
+                        font-weight: 300;
+                    }
+                    
+                }
             }
         }
         .welcome {
             background-color: lighten($color: black, $amount: 94%);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
 
             h2 {
-                    font-size: 1.8em;
+                    font-size: 1.7em;
                     width: 60%;
                     text-align: center;
-                    margin-top: 50px;
                     margin-bottom: 20px;
                 }
             P   {
@@ -72,5 +95,50 @@
             }
             }
         .fonctionnement {
-        }
+             
+            ol {
+            list-style: none;
+            margin-block-start: unset;
+            margin-block-start: unset;
+            margin-block-end: unset;
+            margin-inline-start: unset;
+            margin-inline-end: unset;
+            padding-inline-start: unset;
+            width: 100%;
+    
+            li {
+                width: 90%;
+                margin: 2% 2% 2% 5%;
+                padding: 30px 0% 30px 0% ;
+               box-shadow: 5px 5px 10px lighten($color: black, $amount: 80%) ;
+               border: lighten($color: black, $amount: 95%) solid 5px;
+                border-radius: 30px;
+                font-size: 1.3em;
+                background-color:lighten($color: black, $amount: 95%) ;
+                
+            }
+            i {
+                font-size: 1.3em;
+                color:lighten($color: black, $amount: 40%);
+            }
 
+            p {
+                display: inline;
+                margin-left: 7%;
+                width: 100%;
+                font-weight: 500;
+                
+              
+            }
+
+            & .liste {
+            background-color: $color-primary;
+            color: white;
+            padding:.4rem .7rem .4rem .7rem;
+            border-radius: 100%;
+            margin-right: 2%;
+            position:relative;
+                left: -15px;
+            }
+             }
+            }
