--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -3,4 +3,5 @@ $color-secondary:#FF79DA;
 $color-tertiary:#99E2D0;
 $police-titre:'Shrikhand', cursive;
 $police-texte:'Roboto', sans-serif;
+$color-background:lighten($color: black, $amount: 94%);
 
