--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,55 @@
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap");
+footer {
+  padding: 20px 5% 20px 5%;
+  background-color: #333333;
+  color: white;
+}
+footer a {
+  color: white;
+  width: 100%;
+}
+footer ul {
+  width: 100%;
+  margin-block-start: unset;
+  margin-block-start: unset;
+  margin-block-end: unset;
+  margin-inline-start: unset;
+  margin-inline-end: unset;
+  padding-inline-start: unset;
+}
+footer ul li {
+  list-style: none;
+  width: 100%;
+  margin-top: 2%;
+}
+footer ul li i {
+  margin-right: 1%;
+  height: 20px;
+  width: 20px;
+}
+footer h3 {
+  font-family: "Shrikhand", cursive;
+  font-weight: 500;
+}
+
 .header {
   display: flex;
   justify-content: center;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
 }
 .header__titre {
   font-family: "Shrikhand", cursive;
-  margin-bottom: 0px;
+  margin-bottom: 10px;
 }
-.header__localisation {
-  display: flex;
-  align-items: center;
-  font-size: 1.2em;
-  color: #404040;
-  background-color: #e6e6e6;
-  width: 100%;
-  justify-content: center;
-  box-shadow: inset 0px 4px 5px -4px #404040;
-}
-.header__localisation p {
-  padding-left: 15px;
+.header a {
+  width: unset;
+  position: relative;
+  left: -40%;
+  font-size: 1.5em;
+  text-decoration: none;
+  color: black;
 }
 
 body {
@@ -44,7 +72,7 @@ section h2 {
 
 h2 {
   font-size: 1.7em;
-  font-weight: 600;
+  font-weight: 800;
 }
 
 html {
@@ -61,16 +89,31 @@ h3 {
   font-weight: 600;
 }
 
+.localisation {
+  display: flex;
+  align-items: center;
+  font-size: 1.2em;
+  color: #404040;
+  background-color: #e6e6e6;
+  width: 100%;
+  justify-content: center;
+  box-shadow: inset 0px 4px 5px -4px #404040;
+}
+.localisation p {
+  padding-left: 15px;
+  font-weight: 500;
+}
+
 .restaurant {
   background-color: #f0f0f0;
-  padding: 5% 2% 5% 2%;
+  padding: 5% 0 5% 0;
 }
 .restaurant__nav {
   width: 100%;
 }
 .restaurant__article {
   display: flex;
-  width: 88%;
+  width: 94%;
   position: relative;
   margin: 3%;
   box-shadow: 5px 5px 10px #cccccc;
@@ -131,6 +174,7 @@ h3 {
   width: 60%;
   text-align: center;
   margin-bottom: 20px;
+  margin-top: 40px;
 }
 .welcome P {
   width: 70%;
@@ -141,7 +185,7 @@ h3 {
   font-weight: 300;
 }
 .welcome__button {
-  border-radius: 25px;
+  border-radius: 30px;
   padding: 17px;
   color: white;
   font-size: 1.2em;
@@ -152,6 +196,10 @@ h3 {
   box-shadow: 10px 5px 5px #e6e6e6;
 }
 
+.fonctionnement {
+  margin-top: 50px;
+  margin-bottom: 80px;
+}
 .fonctionnement ol {
   list-style: none;
   margin-block-start: unset;
@@ -164,7 +212,7 @@ h3 {
 }
 .fonctionnement ol li {
   width: 90%;
-  margin: 2% 2% 2% 5%;
+  margin: 2% 2% 5% 5%;
   padding: 30px 0% 30px 0%;
   box-shadow: 5px 5px 10px #cccccc;
   border: #f2f2f2 solid 5px;
@@ -190,6 +238,111 @@ h3 {
   margin-right: 2%;
   position: relative;
   left: -15px;
+}
+
+.entete {
+  width: 100%;
+  height: 30rem;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+.entete img {
+  object-fit: cover;
+  z-index: 1;
+  height: 100%;
+  width: 100%;
+}
+.entete__titre {
+  font-family: "Shrikhand", cursive;
+  z-index: 2;
+  height: 100%;
+  border-radius: 25px 25px 0 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding-top: 1%;
+  background-color: #f0f0f0;
+  position: relative;
+  top: -15%;
+}
+.entete__titre i {
+  position: relative;
+  left: 75%;
+  font-size: 2em;
+}
+.entete__titre h2 {
+  margin-left: 2%;
+}
+
+.menu {
+  background-color: #f0f0f0;
+  padding: 2%;
+}
+.menu h5 {
+  font-size: 1.3em;
+  margin-bottom: 1%;
+}
+.menu h4 {
+  color: #262626;
+  font-weight: 500;
+  border-bottom: 3px solid #99E2D0;
+  width: 35px;
+  font-size: 1.5em;
+}
+.menu__carte {
+  display: flex;
+  width: 92%;
+  position: relative;
+  margin: 1%;
+  box-shadow: 5px 5px 10px #cccccc;
+  border-radius: 20px;
+}
+.menu__anim {
+  width: 10%;
+  background-color: #99E2D0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 0 21px 21px 0;
+}
+.menu__anim i {
+  font-size: 2em;
+  color: white;
+}
+.menu__texte {
+  width: 30%;
+  margin-left: 2%;
+}
+.menu__prix {
+  width: 60%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  font-weight: 600;
+}
+.menu__prix p {
+  margin-right: 2%;
+}
+.menu .commander {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
+.menu .commander .button {
+  border-radius: 30px;
+  padding: 17px;
+  color: white;
+  font-size: 1.2em;
+  font-weight: 500;
+  margin-bottom: 20px;
+  background: linear-gradient(to bottom right, #FF79DA, #9356DC);
+  border: unset;
+  box-shadow: 10px 5px 5px #e6e6e6;
+  padding-left: 4%;
+  padding-right: 4%;
 }
 
 /*# sourceMappingURL=style.css.map */
