--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,19 +3,34 @@
 @import "./layout/_footer";
 @import "./layout/_header";
 @import "./utils/mixins";
-@import "./utils/components";
+@import "./utils/functions";
 @import "./base/base";
+
+.localisation {
+    display: flex;
+    align-items: center;
+    font-size: 1.2em;
+    color: lighten(black,25%);
+    background-color: lighten($color: black, $amount: 90%);
+    width: 100%;
+    justify-content: center;
+    box-shadow: inset 0px 4px 5px -4px #404040;
+    & p {
+        padding-left: 15px;
+        font-weight: 500;
+    }
+}
 
         .restaurant {
             background-color:lighten($color: black, $amount: 94%) ;
-            padding: 5% 2% 5% 2%;
+            padding: 5% 0 5% 0;
             
             &__nav {
                 width: 100%;
             }
             &__article {
             display: flex;
-            width: 88%;
+            width: 94%;
             position: relative;
             margin: 3%;
             box-shadow: 5px 5px 10px lighten($color: black, $amount: 80%) ;
@@ -81,6 +96,7 @@
                     width: 60%;
                     text-align: center;
                     margin-bottom: 20px;
+                    margin-top: 40px;
                 }
             P   {
                 width: 70%;
@@ -95,6 +111,8 @@
             }
             }
         .fonctionnement {
+            margin-top: 50px;
+            margin-bottom: 80px;
              
             ol {
             list-style: none;
@@ -108,7 +126,7 @@
     
             li {
                 width: 90%;
-                margin: 2% 2% 2% 5%;
+                margin: 2% 2% 5% 5%;
                 padding: 30px 0% 30px 0% ;
                box-shadow: 5px 5px 10px lighten($color: black, $amount: 80%) ;
                border: lighten($color: black, $amount: 95%) solid 5px;
@@ -142,3 +160,108 @@
             }
              }
             }
+    .entete {
+        width: 100%;
+        height: 30rem;
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        
+        img{
+            object-fit: cover;
+            z-index: 1;
+            height: 100%;
+            width: 100%;
+        }
+        &__titre {
+            font-family: $police-titre;
+            z-index: 2;
+            height: 100%;
+            border-radius: 25px 25px 0 0;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            padding-top: 1%;
+            background-color: $color-background;
+            position: relative;
+    top: -15%;
+            i{
+                position: relative;
+                left: 75%;
+                font-size: 2em;
+            }
+            h2 {
+                margin-left: 2%;
+                
+            }
+
+        }
+    }
+    .menu {
+        background-color: $color-background;
+        padding: 2%;
+        h5 {
+            font-size: 1.3em; 
+             margin-bottom: 1%;
+        }
+        h4{
+            color: lighten(black,15%);
+            font-weight: 500;
+            border-bottom: 3px solid $color-tertiary;
+            width: 35px;
+            font-size: 1.5em;
+          
+
+
+        }
+    
+    &__carte {
+    display: flex;
+            width: 92%;
+            position: relative;
+            margin: 1%;
+            box-shadow: 5px 5px 10px lighten($color: black, $amount: 80%) ;
+            border-radius: 20px;
+    }
+    &__anim{
+        width: 10%;  
+        background-color: $color-tertiary;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 0 21px  21px 0;
+        i{
+            font-size: 2em;
+            color: white;
+        }
+
+    }
+    &__texte {
+        width: 30%;
+        margin-left: 2%;
+    }
+    &__prix {
+        width: 60%;
+        display: flex;
+        justify-content: flex-end;
+    align-items: flex-end;
+    font-weight: 600;
+    p {
+        margin-right: 2%;
+    
+    }     
+    }
+    .commander{
+        display: flex;
+        width: 100%;
+         justify-content: center;
+         margin-top: 5%;
+         margin-bottom: 5%;
+    .button {
+        @include button;
+        padding-left: 4%;
+        padding-right: 4%;
+        
+    }
+}
+}
