--- a/css/style.css
+++ b/css/style.css
@@ -17,11 +17,12 @@ footer ul {
   margin-inline-start: unset;
   margin-inline-end: unset;
   padding-inline-start: unset;
+  font-size: 0.9em;
 }
 footer ul li {
   list-style: none;
   width: 100%;
-  margin-top: 2%;
+  margin-top: 1%;
 }
 footer ul li i {
   margin-right: 1%;
@@ -38,6 +39,7 @@ footer h3 {
   justify-content: center;
   flex-direction: row;
   align-items: center;
+  position: relative;
 }
 .header__titre {
   font-family: "Shrikhand", cursive;
@@ -45,8 +47,8 @@ footer h3 {
 }
 .header a {
   width: unset;
-  position: relative;
-  left: -40%;
+  position: absolute;
+  left: 4%;
   font-size: 1.5em;
   text-decoration: none;
   color: black;
@@ -82,10 +84,11 @@ html {
 a {
   text-decoration: none;
   width: 100%;
+  color: black;
 }
 
 h3 {
-  font-size: 1.4em;
+  font-size: 1.2em;
   font-weight: 600;
 }
 
@@ -113,12 +116,12 @@ h3 {
 }
 .restaurant__article {
   display: flex;
-  width: 94%;
+  width: 90%;
   position: relative;
-  margin: 3%;
+  margin: 5%;
   box-shadow: 5px 5px 10px #cccccc;
   border-radius: 20px;
-  height: 300px;
+  height: 250px;
 }
 .restaurant__article--new {
   position: absolute;
@@ -133,7 +136,7 @@ h3 {
 }
 .restaurant__img {
   width: 100%;
-  height: 70%;
+  height: 65%;
 }
 .restaurant__img img {
   height: 100%;
@@ -145,22 +148,31 @@ h3 {
   color: black;
   position: relative;
   padding: 15px;
+  background-color: white;
+  border-radius: 0 0 23px 23px;
 }
 .restaurant__texte h3 {
   margin: 0px 0px 5px 0px;
 }
 .restaurant__texte p {
-  margin: 0px;
-  font-size: 1.2em;
+  margin: 10px 0 15px 0;
+  font-size: 1em;
 }
 .restaurant__texte div {
   position: absolute;
   right: 6%;
-  top: 37%;
+  top: 25%;
 }
 .restaurant__texte div i {
+  color: black;
   font-size: 2em;
-  font-weight: 300;
+}
+.restaurant__texte div #iweight {
+  color: white;
+  font-size: 1.8em;
+  position: absolute;
+  left: 5%;
+  bottom: 5%;
 }
 
 .welcome {
@@ -194,6 +206,16 @@ h3 {
   background: linear-gradient(to bottom right, #FF79DA, #9356DC);
   border: unset;
   box-shadow: 10px 5px 5px #e6e6e6;
+  transform: scale(1);
+  transition: transform 400ms;
+  transition-timing-function: cubic-bezier(0.46, 0.03, 0.52, 0.96);
+  cursor: pointer;
+  opacity: 1;
+  margin-bottom: 6rem;
+}
+.welcome__button:hover {
+  transform: scale(1.15);
+  opacity: 1;
 }
 
 .fonctionnement {
@@ -238,6 +260,7 @@ h3 {
   margin-right: 2%;
   position: relative;
   left: -15px;
+  margin-left: unset;
 }
 
 .entete {
@@ -247,11 +270,16 @@ h3 {
   flex-direction: column;
   position: relative;
 }
+.entete .coeur {
+  width: 32px;
+  height: 32px;
+}
 .entete img {
   object-fit: cover;
   z-index: 1;
   height: 100%;
   width: 100%;
+  margin-bottom: -4rem;
 }
 .entete__titre {
   font-family: "Shrikhand", cursive;
@@ -261,68 +289,100 @@ h3 {
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding-top: 1%;
+  padding-top: 1rem;
   background-color: #f0f0f0;
-  position: relative;
-  top: -15%;
 }
 .entete__titre i {
-  position: relative;
-  left: 75%;
   font-size: 2em;
+}
+.entete__titre #iweightpage {
+  position: relative;
+  left: 5%;
+  color: #f0f0f0;
+  font-size: 1.8em;
+  bottom: 100%;
 }
 .entete__titre h2 {
   margin-left: 2%;
+  width: 87%;
 }
 
 .menu {
   background-color: #f0f0f0;
   padding: 2%;
+  width: 96%;
 }
 .menu h5 {
-  font-size: 1.3em;
+  font-size: 1.1em;
   margin-bottom: 1%;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 .menu h4 {
   color: #262626;
-  font-weight: 500;
+  font-weight: 400;
   border-bottom: 3px solid #99E2D0;
   width: 35px;
-  font-size: 1.5em;
+  font-size: 1.2em;
 }
 .menu__carte {
   display: flex;
-  width: 92%;
+  width: 98%;
   position: relative;
   margin: 1%;
   box-shadow: 5px 5px 10px #cccccc;
-  border-radius: 20px;
+  border-radius: 23px;
+  background-color: white;
+}
+.menu__carte:hover {
+  cursor: pointer;
+}
+.menu__carte:hover .menu__anim {
+  z-index: 2;
+  width: 30%;
+}
+.menu__carte:hover .menu__prix {
+  width: 38%;
+}
+.menu__cartehover .menu__texte {
+  width: 40%;
 }
 .menu__anim {
-  width: 10%;
+  width: 0%;
   background-color: #99E2D0;
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 0 21px 21px 0;
+  z-index: -1;
+  transition: all 600ms;
+  transition-timing-function: ease-in-out;
 }
 .menu__anim i {
-  font-size: 2em;
+  font-size: 1.5em;
   color: white;
 }
 .menu__texte {
-  width: 30%;
+  width: 60%;
   margin-left: 2%;
 }
+.menu__texte p {
+  font-size: 1em;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
 .menu__prix {
-  width: 60%;
+  z-index: 1;
+  width: 38%;
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
   font-weight: 600;
 }
 .menu__prix p {
-  margin-right: 2%;
+  margin-right: 10%;
 }
 .menu .commander {
   display: flex;
@@ -341,8 +401,17 @@ h3 {
   background: linear-gradient(to bottom right, #FF79DA, #9356DC);
   border: unset;
   box-shadow: 10px 5px 5px #e6e6e6;
+  transform: scale(1);
+  transition: transform 400ms;
+  transition-timing-function: cubic-bezier(0.46, 0.03, 0.52, 0.96);
+  cursor: pointer;
+  opacity: 1;
   padding-left: 4%;
   padding-right: 4%;
+}
+.menu .commander .button:hover {
+  transform: scale(1.15);
+  opacity: 1;
 }
 
 /*# sourceMappingURL=style.css.map */
