--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -25,8 +25,9 @@ html {
  a{
     text-decoration: none;
     width: 100%;
+    color: black;
 }
 h3 {
-    font-size: 1.4em;
+    font-size: 1.2em;
     font-weight: 600;
 }
