--- a/sass/layout/__footer.scss
+++ b/sass/layout/__footer.scss
@@ -15,11 +15,11 @@ footer {
         margin-inline-start: unset;
         margin-inline-end: unset;
         padding-inline-start: unset;
-    
+        font-size: 0.9em;
     li {
         list-style: none;
         width: 100%;
-        margin-top: 2%;
+        margin-top: 1%;
         i{
             margin-right: 1%;
             height: 20px;
