--- a/sass/main.scss
+++ b/sass/main.scss
@@ -30,12 +30,12 @@
             }
             &__article {
             display: flex;
-            width: 94%;
+            width: 90%;
             position: relative;
-            margin: 3%;
+            margin: 5%;
             box-shadow: 5px 5px 10px lighten($color: black, $amount: 80%) ;
             border-radius: 20px;
-            height: 300px;
+            height: 250px;
                 &--new {
                 position:absolute;
                 top: 7%;
@@ -50,7 +50,7 @@
             }
             &__img {
                 width: 100%;
-                height: 70%;
+                height: 65%;
                 & img {
                     height: 100%;
                 width: 100%;
@@ -62,24 +62,35 @@
                 color: black;
                 position: relative;
                 padding:15px;
+                background-color: white;
+                border-radius: 0 0 23px 23px;
 
                 h3 {
                     margin: 0px 0px 5px 0px;
 
                 }
                 p {
-                   margin: 0px; 
-                   font-size: 1.2em;
+                   margin: 10px 0 15px 0; 
+                   font-size: 1em;
                 }
                 div {
                     position:absolute;
                     right: 6%;
-                    top:37%;
+                    top:25%;
                     
                     i{
-                      
+                        color: black;
+                        
                         font-size: 2em;
-                        font-weight: 300;
+                    }
+                    #iweight {
+                        color: white;
+    font-size: 1.8em;
+    
+    position: absolute;
+    left: 5%;
+    bottom: 5%;
+                        
                     }
                     
                 }
@@ -108,6 +119,7 @@
             }
             &__button {
                 @include button;
+                margin-bottom: 6rem;
             }
             }
         .fonctionnement {
@@ -157,6 +169,7 @@
             margin-right: 2%;
             position:relative;
                 left: -15px;
+                margin-left: unset;
             }
              }
             }
@@ -166,12 +179,20 @@
         display: flex;
         flex-direction: column;
         position: relative;
+
+        .coeur {
+           
+    width: 32px ;
+    height: 32px;
+
+        }
         
         img{
             object-fit: cover;
             z-index: 1;
             height: 100%;
             width: 100%;
+            margin-bottom: -4rem;
         }
         &__titre {
             font-family: $police-titre;
@@ -181,18 +202,24 @@
             display: flex;
             flex-direction: row;
             align-items: center;
-            padding-top: 1%;
+            padding-top: 1rem;
             background-color: $color-background;
-            position: relative;
-    top: -15%;
+       
             i{
-                position: relative;
-                left: 75%;
+                
                 font-size: 2em;
+            }
+            #iweightpage {
+                position: relative;
+    left: 5%;
+    color: #f0f0f0;
+    font-size: 1.8em;
+    bottom: 100%;
+
             }
             h2 {
                 margin-left: 2%;
-                
+                width: 87%
             }
 
         }
@@ -200,16 +227,20 @@
     .menu {
         background-color: $color-background;
         padding: 2%;
+        width: 96%;
         h5 {
-            font-size: 1.3em; 
+            font-size: 1.1em; 
              margin-bottom: 1%;
+             text-overflow: ellipsis;
+            overflow: hidden;
+            white-space: nowrap;
         }
         h4{
             color: lighten(black,15%);
-            font-weight: 500;
+            font-weight: 400;
             border-bottom: 3px solid $color-tertiary;
             width: 35px;
-            font-size: 1.5em;
+            font-size: 1.2em;
           
 
 
@@ -217,37 +248,68 @@
     
     &__carte {
     display: flex;
-            width: 92%;
+            width: 98%;
             position: relative;
             margin: 1%;
             box-shadow: 5px 5px 10px lighten($color: black, $amount: 80%) ;
-            border-radius: 20px;
+            border-radius: 23px;
+            background-color: white;
+
+            &:hover {
+                cursor: pointer;
+            }
+            &:hover  .menu__anim {
+                
+                z-index: 2;
+                width: 30%;
+                
+            }
+            &:hover  .menu__prix {
+
+                width: 38%;
+            }
+            &hover .menu__texte{
+                width: 40%;
+            }
     }
     &__anim{
-        width: 10%;  
+         width: 0%;
         background-color: $color-tertiary;
         display: flex;
         justify-content: center;
         align-items: center;
         border-radius: 0 21px  21px 0;
+        z-index: -1;
+        
+    transition: all 600ms;
+    transition-timing-function: ease-in-out;
         i{
-            font-size: 2em;
+            font-size: 1.5em;
             color: white;
         }
 
     }
     &__texte {
-        width: 30%;
+        width: 60%;
         margin-left: 2%;
+        
+        p{
+            font-size: 1em;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            white-space: nowrap;
+            
+        }
     }
     &__prix {
-        width: 60%;
+        z-index: 1;
+        width: 38%;
         display: flex;
         justify-content: flex-end;
     align-items: flex-end;
     font-weight: 600;
     p {
-        margin-right: 2%;
+        margin-right: 10%;
     
     }     
     }
