--- a/sass/main.scss
+++ b/sass/main.scss
@@ -81,16 +81,14 @@
                     i{
                         color: black;
                         
-                        font-size: 2em;
+                        font-size: 40px;
                     }
                     #iweight {
                         color: white;
-    font-size: 1.8em;
-    
-    position: absolute;
-    left: 5%;
-    bottom: 5%;
-                        
+                        font-size: 36px;
+                        position: absolute;
+                        left: 5%;
+                        bottom: 7%;        
                     }
                     
                 }
@@ -178,23 +176,19 @@
         height: 30rem;
         display: flex;
         flex-direction: column;
-        position: relative;
-
-        .coeur {
-           
-    width: 32px ;
-    height: 32px;
-
-        }
-        
-        img{
+        margin-bottom: -5rem;
+         img{
             object-fit: cover;
             z-index: 1;
             height: 100%;
             width: 100%;
-            margin-bottom: -4rem;
+        
         }
-        &__titre {
+    }
+    
+        
+       
+        .titre {
             font-family: $police-titre;
             z-index: 2;
             height: 100%;
@@ -203,27 +197,33 @@
             flex-direction: row;
             align-items: center;
             padding-top: 1rem;
-            background-color: $color-background;
-       
+            background-color: $color-background; 
+            width: 100%;
+               .coeur {
+    width: 32px ;
+    height: 32px;
+
+        }
             i{
                 
-                font-size: 2em;
+                font-size: 40px;
             }
             #iweightpage {
                 position: relative;
-    left: 5%;
+    left: 6%;
     color: #f0f0f0;
-    font-size: 1.8em;
-    bottom: 100%;
+    font-size: 36px;
+    bottom: 124%;
+}
 
-            }
+            
             h2 {
                 margin-left: 2%;
                 width: 87%
             }
 
         }
-    }
+    
     .menu {
         background-color: $color-background;
         padding: 2%;
@@ -254,38 +254,41 @@
             box-shadow: 5px 5px 10px lighten($color: black, $amount: 80%) ;
             border-radius: 23px;
             background-color: white;
-
+            overflow: hidden;
+            white-space: nowrap;
             &:hover {
                 cursor: pointer;
             }
+            
             &:hover  .menu__anim {
                 
-                z-index: 2;
-                width: 30%;
-                
+            transform: translate(-100%);
+                    
             }
             &:hover  .menu__prix {
-
-                width: 38%;
+                transform: translate(-50%)
+                
             }
-            &hover .menu__texte{
-                width: 40%;
+            &:hover .menu__texte {
+                
             }
+            
     }
     &__anim{
-         width: 0%;
+         flex: 1;
         background-color: $color-tertiary;
         display: flex;
         justify-content: center;
         align-items: center;
         border-radius: 0 21px  21px 0;
-        z-index: -1;
-        
-    transition: all 600ms;
+         margin-right: -22%;
+    transition: all 1600ms;
     transition-timing-function: ease-in-out;
         i{
             font-size: 1.5em;
             color: white;
+            transform: rotate(360deg);
+            transition: all 600ms 100ms;
         }
 
     }
@@ -293,21 +296,24 @@
         width: 60%;
         margin-left: 2%;
         
+        
         p{
             font-size: 1em;
+           
             text-overflow: ellipsis;
             overflow: hidden;
             white-space: nowrap;
-            
         }
     }
     &__prix {
-        z-index: 1;
-        width: 38%;
+        
+        flex: 2;
         display: flex;
         justify-content: flex-end;
     align-items: flex-end;
     font-weight: 600;
+    transition: all 1600ms;
+    transition-timing-function: ease-in-out;
     p {
         margin-right: 10%;
     
