--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap");
 footer {
@@ -99,6 +100,23 @@ h3 {
   font-weight: 600;
 }
 
+@keyframes progress-heart {
+  0% {
+    transform: scaleY(0);
+  }
+  17% {
+    transform: scaleY(0.18);
+  }
+  24% {
+    transform: scaleY(0.4);
+  }
+  46% {
+    transform: scaleY(0.81);
+  }
+  100% {
+    transform: scaleY(1);
+  }
+}
 .localisation {
   display: flex;
   align-items: center;
@@ -129,6 +147,10 @@ h3 {
   box-shadow: 5px 5px 10px #cccccc;
   border-radius: 20px;
   height: 250px;
+}
+.restaurant__article:hover {
+  box-shadow: 5px 5px 15px #b3b3b3, -5px -5px 15px #b3b3b3;
+  opacity: 0.8;
 }
 .restaurant__article--new {
   position: absolute;
@@ -171,15 +193,37 @@ h3 {
   top: 25%;
 }
 .restaurant__texte div i {
-  color: black;
   font-size: 40px;
-}
-.restaurant__texte div #iweight {
   color: white;
-  font-size: 36px;
+  position: relative;
+  text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
+  z-index: 0;
+  transition: text-shadow 500ms ease-in-out;
+}
+.restaurant__texte div i:hover {
+  cursor: pointer;
+}
+.restaurant__texte div i:hover::after {
+  transform: scale(1.01);
+  opacity: 1;
+}
+.restaurant__texte div i::after {
+  background: linear-gradient(265deg, #99E2D0, #FF79DA, #9356DC);
+  content: "";
   position: absolute;
-  left: 5%;
-  bottom: 7%;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transform-origin: bottom;
+  transform: scale(0);
+  transition: all 500ms ease-in-out;
+  text-shadow: none;
+  z-index: 1;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .welcome {
@@ -213,16 +257,18 @@ h3 {
   background: linear-gradient(to bottom right, #FF79DA, #9356DC);
   border: unset;
   box-shadow: 10px 5px 5px #e6e6e6;
-  transform: scale(1);
-  transition: transform 400ms;
+  position: relative;
+  transition: all 300ms;
   transition-timing-function: cubic-bezier(0.46, 0.03, 0.52, 0.96);
   cursor: pointer;
+  box-shadow: 5px 5px 10px #cccccc;
   opacity: 1;
   margin-bottom: 6rem;
 }
 .welcome__button:hover {
-  transform: scale(1.15);
-  opacity: 1;
+  background: linear-gradient(to bottom right, #9356DC, #FF79DA);
+  box-shadow: 5px 5px 15px #b3b3b3, -5px -5px 15px #b3b3b3;
+  opacity: 0.8;
 }
 
 .fonctionnement {
@@ -244,10 +290,17 @@ h3 {
   margin: 2% 2% 5% 5%;
   padding: 30px 0% 30px 0%;
   box-shadow: 5px 5px 10px #cccccc;
-  border: #f2f2f2 solid 5px;
   border-radius: 30px;
   font-size: 1.3em;
   background-color: #f2f2f2;
+  transition: all 300ms ease-in;
+}
+.fonctionnement ol li:hover {
+  background: #e4d5f6;
+  opacity: 0.8;
+}
+.fonctionnement ol li:hover i {
+  color: #9356DC;
 }
 .fonctionnement ol i {
   font-size: 1.3em;
@@ -286,7 +339,7 @@ h3 {
 
 .titre {
   font-family: "Shrikhand", cursive;
-  z-index: 2;
+  z-index: 1;
   height: 100%;
   border-radius: 25px 25px 0 0;
   display: flex;
@@ -297,18 +350,43 @@ h3 {
   width: 100%;
 }
 .titre .coeur {
-  width: 32px;
-  height: 32px;
+  width: 35px;
+  height: 35px;
+  padding: 20px;
+  z-index: 1;
 }
 .titre i {
   font-size: 40px;
-}
-.titre #iweightpage {
+  color: white;
   position: relative;
-  left: 6%;
-  color: #f0f0f0;
-  font-size: 36px;
-  bottom: 124%;
+  text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
+  z-index: 0;
+  transition: text-shadow 500ms ease-in-out;
+}
+.titre i:hover {
+  cursor: pointer;
+}
+.titre i:hover::after {
+  transform: scale(1.01);
+  opacity: 1;
+}
+.titre i::after {
+  background: linear-gradient(265deg, #99E2D0, #FF79DA, #9356DC);
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transform-origin: bottom;
+  transform: scale(0);
+  transition: all 500ms ease-in-out;
+  text-shadow: none;
+  z-index: 1;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 .titre h2 {
   margin-left: 2%;
@@ -347,9 +425,13 @@ h3 {
 }
 .menu__carte:hover {
   cursor: pointer;
+  box-shadow: 5px 5px 15px #b3b3b3, -5px -5px 15px #b3b3b3;
 }
 .menu__carte:hover .menu__anim {
   transform: translate(-100%);
+}
+.menu__carte:hover .menu__anim i {
+  transform: rotate(1turn);
 }
 .menu__carte:hover .menu__prix {
   transform: translate(-50%);
@@ -362,14 +444,14 @@ h3 {
   align-items: center;
   border-radius: 0 21px 21px 0;
   margin-right: -22%;
-  transition: all 1600ms;
+  transition: all 1000ms;
   transition-timing-function: ease-in-out;
 }
 .menu__anim i {
   font-size: 1.5em;
   color: white;
-  transform: rotate(360deg);
-  transition: all 600ms 100ms;
+  transform: rotate(-180deg);
+  transition: all 1000ms 100ms ease-in-out;
 }
 .menu__texte {
   width: 60%;
@@ -387,7 +469,7 @@ h3 {
   justify-content: flex-end;
   align-items: flex-end;
   font-weight: 600;
-  transition: all 1600ms;
+  transition: all 1000ms;
   transition-timing-function: ease-in-out;
 }
 .menu__prix p {
@@ -410,17 +492,19 @@ h3 {
   background: linear-gradient(to bottom right, #FF79DA, #9356DC);
   border: unset;
   box-shadow: 10px 5px 5px #e6e6e6;
-  transform: scale(1);
-  transition: transform 400ms;
+  position: relative;
+  transition: all 300ms;
   transition-timing-function: cubic-bezier(0.46, 0.03, 0.52, 0.96);
   cursor: pointer;
+  box-shadow: 5px 5px 10px #cccccc;
   opacity: 1;
   padding-left: 4%;
   padding-right: 4%;
 }
 .menu .commander .button:hover {
-  transform: scale(1.15);
-  opacity: 1;
+  background: linear-gradient(to bottom right, #9356DC, #FF79DA);
+  box-shadow: 5px 5px 15px #b3b3b3, -5px -5px 15px #b3b3b3;
+  opacity: 0.8;
 }
 
 /*# sourceMappingURL=style.css.map */
