--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -1,21 +1,56 @@
 @mixin button {
-    border-radius: 30px;
-    padding: 17px;
-    color: white;
-    font-size: 1.2em;
-    font-weight: 500;
-    margin-bottom: 20px;
-    background: linear-gradient(to bottom right,$color-secondary, $color-primary);
-    border:unset;
-    box-shadow: 10px 5px 5px lighten($color: black, $amount: 90%);
-    transform: scale(1);
-    transition: transform 400ms;
-    transition-timing-function: cubic-bezier(0.46, 0.03, 0.52, 0.96);
-    cursor: pointer;
-    opacity: 1;
-    &:hover {
-        transform: scale(1.15);
-        opacity: 1;
-    }
+	border-radius: 30px;
+	padding: 17px;
+	color: white;
+	font-size: 1.2em;
+	font-weight: 500;
+	margin-bottom: 20px;
+	background: linear-gradient(to bottom right, $color-secondary, $color-primary);
+	border: unset;
+	box-shadow: 10px 5px 5px lighten($color: black, $amount: 90%);
+	position: relative;
+	transition: all 300ms;
+	transition-timing-function: cubic-bezier(0.46, 0.03, 0.52, 0.96);
+	cursor: pointer;
+	box-shadow: 5px 5px 10px lighten($color: black, $amount: 80%);
+	opacity: 1;
+	&:hover {
+		background: linear-gradient( to bottom right, $color-primary, $color-secondary);
+		box-shadow: $shadow;
+		opacity: 0.8;
+	}
 }
 
+@mixin coeur {
+	font-size: 40px;
+	color: white;
+	position: relative;
+	text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
+	z-index: 0;
+	transition: text-shadow 500ms ease-in-out;
+	&:hover {
+		cursor: pointer;
+		&::after  {
+			transform: scale(1.01);
+			opacity: 1;
+		}
+	}
+	&::after {
+		background: linear-gradient( 265deg, $color-tertiary, $color-secondary, $color-primary);
+		content: "";
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		opacity: 0;
+		transform-origin: bottom;
+		transform: scale(0);
+		transition: all 500ms ease-in-out;
+		text-shadow: none;
+		z-index: 1;
+		background-clip: text;
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent;
+	}
+}
