--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -2,6 +2,7 @@ body {
 	width: 100%;
 	margin: 0px;
 	font-family: $police-texte;
+	@include reset;
 }
 
 .dimension {
@@ -17,6 +18,7 @@ section {
 	flex-wrap: nowrap;
 	align-items: flex-start;
 	width: 100%;
+	justify-content: space-around;
 	h2 {
 		margin-left: 5%;
 		margin-bottom: 20px;
