--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -1,5 +1,6 @@
 @mixin button {
 	border-radius: 30px;
+	width: 50%;
 	padding: 17px;
 	color: white;
 	font-size: 1.2em;
@@ -22,12 +23,12 @@
 }
 
 @mixin coeur {
-	font-size: 40px;
+	font-size: 31px;
 	color: white;
 	position: relative;
 	text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
 	z-index: 0;
-	transition: text-shadow 500ms ease-in-out;
+	transition: text-shadow 400ms ease-in-out;
 	&:hover {
 		cursor: pointer;
 		&::after  {
@@ -46,11 +47,34 @@
 		opacity: 0;
 		transform-origin: bottom;
 		transform: scale(0);
-		transition: all 500ms ease-in-out;
+		transition: all 400ms ease-in-out;
 		text-shadow: none;
 		z-index: 1;
 		background-clip: text;
 		-webkit-background-clip: text;
 		-webkit-text-fill-color: transparent;
+	}
+}
+@mixin loading-spinner {
+	.logo {
+		background-color: #fff;
+		position : fixed;
+		animation: opacityframe .01s 1.5s both;
+		z-index: 10;
+		height : 100%;
+		width : 100%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	  }
+	  
+	  .loading {
+		filter: hue-rotate(180deg);
+	  }
+} 
+@mixin reset {
+	html, body, p, ol, ul, li, dl, dt, dd, blockquote, figure, fieldset, legend, textarea, pre, iframe, hr, h1, h2, h3, h4, h5, h6 {
+		margin: 0;
+		padding: 0;
 	}
 }
