--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -5,3 +5,8 @@ $police-titre:'Shrikhand', cursive;
 $police-texte:'Roboto', sans-serif;
 $color-background:lighten($color: black, $amount: 94%);
 $shadow:5px 5px 15px lighten($color: black, $amount: 70%), -5px -5px 15px lighten($color: black, $amount: 70%);
+$apparition1: carte-anim 600ms 200ms ease-out both;
+$apparition2: carte-anim 600ms 400ms ease-in-out both;
+$apparition3: carte-anim 600ms 600ms ease-in-out both;
+$apparition4: carte-anim 600ms 800ms ease-in-out both;
+
