--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -3,8 +3,11 @@ $color-secondary:#FF79DA;
 $color-tertiary:#99E2D0;
 $police-titre:'Shrikhand', cursive;
 $police-texte:'Roboto', sans-serif;
+$nblettre:8;
+$anim-duration: 1500ms;
+$anim-delay: $anim-duration / $nblettre;
 $color-background:lighten($color: black, $amount: 94%);
-$shadow:5px 5px 15px lighten($color: black, $amount: 70%), -5px -5px 15px lighten($color: black, $amount: 70%);
+$shadow:2px 2px 2px lighten($color: black, $amount: 70%), -2px -2px 2px lighten($color: black, $amount: 70%);
 $apparition1: carte-anim 600ms 200ms ease-out both;
 $apparition2: carte-anim 600ms 400ms ease-in-out both;
 $apparition3: carte-anim 600ms 600ms ease-in-out both;
