--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,111 @@ h3 {
     margin-top: 0%;
   }
 }
+@keyframes lettres {
+  0% {
+    font-size: 0em;
+  }
+  100% {
+    font-size: 5em;
+  }
+}
+@keyframes invisible {
+  0% {
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    visibility: visible;
+    display: contents;
+    opacity: 0;
+  }
+  100% {
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    visibility: hidden;
+    display: none;
+    opacity: 1;
+  }
+}
+@keyframes degrade {
+  0% {
+    background: linear-gradient(1deg, #99E2D0, #FF79DA, #9356DC);
+  }
+  25% {
+    background: linear-gradient(360deg, #99E2D0, #FF79DA, #9356DC);
+  }
+  50% {
+    background: linear-gradient(1deg, #FF79DA, #9356DC, #99E2D0);
+  }
+  75% {
+    background: linear-gradient(360deg, #9356DC, #99E2D0, #FF79DA);
+  }
+  100% {
+    background: linear-gradient(1deg, #FF79DA, #99E2D0, #9356DC);
+  }
+}
+@keyframes shadowanim {
+  0% {
+    text-shadow: 5px 5px #4d4d4d;
+  }
+  100% {
+    text-shadow: 5px 50px #4d4d4d;
+  }
+}
+.load {
+  width: 100%;
+  height: 100%;
+  z-index: 5;
+  font-family: "Shrikhand", cursive;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  animation: invisible 0s 3000ms forwards;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: white;
+}
+.load__lettre {
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  height: 100%;
+  animation: lettres 1000ms ease-in-out forwards infinite alternate, degrade 1500ms ease-in-out forwards infinite alternate, invisible 1500ms backwards;
+  opacity: 0;
+}
+.load__lettre--1 {
+  animation-delay: 187.5ms;
+}
+.load__lettre--2 {
+  animation-delay: 375ms;
+}
+.load__lettre--3 {
+  animation-delay: 562.5ms;
+}
+.load__lettre--4 {
+  animation-delay: 750ms;
+}
+.load__lettre--5 {
+  animation-delay: 937.5ms;
+}
+.load__lettre--6 {
+  animation-delay: 1125ms;
+}
+.load__lettre--7 {
+  animation-delay: 1312.5ms;
+}
+.load__lettre--8 {
+  animation-delay: 1500ms;
+}
+.load__lettre__spinner {
+  position: absolute;
+}
+
 .localisation {
   display: flex;
   align-items: center;
@@ -279,7 +384,7 @@ h3 {
 }
 .welcome__button:hover {
   background: linear-gradient(to bottom right, #9356DC, #FF79DA);
-  box-shadow: 5px 5px 15px #b3b3b3, -5px -5px 15px #b3b3b3;
+  box-shadow: 2px 2px 2px #b3b3b3, -2px -2px 2px #b3b3b3;
   opacity: 0.8;
 }
 
@@ -438,7 +543,6 @@ h3 {
   display: flex;
   width: 98%;
   height: 75px;
-  position: relative;
   box-shadow: 5px 5px 10px #cccccc;
   border-radius: 23px;
   background-color: white;
@@ -461,40 +565,40 @@ h3 {
 }
 .menu__carte:hover {
   cursor: pointer;
-  box-shadow: 5px 5px 15px #b3b3b3, -5px -5px 15px #b3b3b3;
+  box-shadow: 2px 2px 2px #b3b3b3, -2px -2px 2px #b3b3b3;
 }
 .menu__carte:hover .menu__anim {
-  transform: translate(-110%);
+  margin: 0;
 }
 .menu__carte:hover .menu__anim i {
   transform: rotate(1turn);
 }
-.menu__carte:hover .menu__prix {
-  transform: translate(-50%);
-}
 .menu__anim {
-  flex: 1;
+  margin-right: -70px;
+  width: 65px;
   background-color: #99E2D0;
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 0 21px 21px 0;
-  margin-right: -22%;
-  transition: all 1000ms;
-  transition-timing-function: ease-in-out;
+  transition: all 1000ms ease-in-out;
 }
 .menu__anim i {
   font-size: 1.5em;
   color: white;
-  transform: rotate(-180deg);
-  transition: all 1000ms 100ms ease-in-out;
+  transform: rotate(180deg);
+  transition: all 500ms 300ms ease-in-out;
 }
 .menu__texte {
-  width: 60%;
+  flex: 1;
   margin-left: 20px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  transition: all 500ms ease-in-out;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 .menu__texte p {
   font-size: 0.9em;
@@ -503,7 +607,6 @@ h3 {
   white-space: nowrap;
 }
 .menu__prix {
-  flex: 2;
   margin-bottom: 10px;
   margin-right: 10px;
   display: flex;
@@ -514,7 +617,7 @@ h3 {
   transition-timing-function: ease-in-out;
 }
 .menu__prix p {
-  margin-right: 10%;
+  margin-right: 10px;
 }
 .menu .commander {
   display: flex;
@@ -543,12 +646,8 @@ h3 {
 }
 .menu .commander .button:hover {
   background: linear-gradient(to bottom right, #9356DC, #FF79DA);
-  box-shadow: 5px 5px 15px #b3b3b3, -5px -5px 15px #b3b3b3;
+  box-shadow: 2px 2px 2px #b3b3b3, -2px -2px 2px #b3b3b3;
   opacity: 0.8;
-}
-
-.corps {
-  animation: overflow-body 0.01s 1.5s both;
 }
 
 /*# sourceMappingURL=style.css.map */
